[package]
name = "gmod-macros"
version = "2.0.0"
authors = ["William Venner <william@venner.io>"]
edition = "2021"
license = "MIT"
description = "Proc macros for gmod-rs"
repository = "https://github.com/WilliamVenner/gmod-rs"

[features]
gmcl = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"
