[package]
name = "gmod"
version = "4.0.2"
authors = ["William Venner <william@venner.io>"]
edition = "2018"
license = "MIT"
description = "A swiss army knife for creating binary modules for Garry's Mod in Rust"
repository = "https://github.com/WilliamVenner/gmod-rs"
keywords = ["gmod", "garrysmod", "module", "glua"]
categories = ["api-bindings", "external-ffi-bindings", "game-development", "development-tools"]

[dependencies]
libloading = "0"
detour = "0"
skidscan = "0"
cstr = "0"
lazy_static = "1"
ctor = "0"
gmod-macros = { version = "0.1.0", path = "../gmod-macros" }

fn_type_alias = "0"
fn_abi = "2"
cfg_table = "0"
null_fn = "0"
fn_has_this = "0"
