[package]
name = "gmod"
version = "17.0.0"
authors = ["William Venner <william@venner.io>"]
edition = "2021"
license = "MIT"
description = "A swiss army knife for creating binary modules for Garry's Mod in Rust"
repository = "https://github.com/WilliamVenner/gmod-rs"
keywords = ["gmod", "garrysmod", "module", "glua"]
categories = ["api-bindings", "external-ffi-bindings", "game-development", "development-tools"]

[features]
default = ["hax"]
hax = ["ctor", "skidscan", "retour", "fn_type_alias", "fn_abi", "cfg_table", "null_fn", "fn_has_this"]
gmcl = ["gmod-macros/gmcl"]

[dependencies]
gmod-macros = { version = "2.0.1", path = "../gmod-macros" }

libloading = "0"
cstr = "0"
lazy_static = "1"

retour = { version = "0", optional = true }
ctor = { version = "0", optional = true }
skidscan = { version = "2", optional = true }

fn_type_alias = { version = "0", optional = true }
fn_abi = { version = "2", optional = true }
cfg_table = { version = "1", optional = true }
null_fn = { version = "0", optional = true }
fn_has_this = { version = "0", optional = true }
